# starlark-python

./: .gitignore  AGENTS.md  CLAUDE.md  HISTORY.md  Makefile  README.md  ROADMAP.md  STATUS.md  pyproject.toml
.github/workflows/: cherry-picker.yml  ci.yml  community-review-labeler.yml  labeler.yml  release-helper.yml  remove-labels.yml  scorecard.yml  stale.yml
docs/: README.md  style.md  xfail-review.md
reference/src/main/java/net/starlark/java/syntax/: TypeChecker.java
scripts/: tasks.py
security/: 2026-05-05-review-deepseek-v4-pro.md  2026-05-05-review-gemini-3-flash-preview.md  cost-estimates.md  threat-model.md
src/starlark/: __init__.py  __main__.py  cmd.py  program.py  values.py
src/starlark/eval/: __init__.py  builtins.py  collection_methods.py  errors.py  evaluator.py  function.py  json_module.py  limits.py  loader.py  methods.py  module.py  mutability.py  string_methods.py  test_driver.py  values.py
src/starlark/syntax/: __init__.py  ast.py  errors.py  lexer.py  location.py  parser.py  resolver.py  tokens.py
tests/: test_builtins.py  test_compile.py  test_conformance.py  test_cross_validation.py  test_depth_limits.py  test_eval.py  test_heap_counter.py  test_json.py  test_lexer.py  test_lexer_conformance.py  test_limits.py  test_load.py  test_loader.py  test_methods.py  test_namespace.py  test_parse_errors.py  test_parser.py  test_parser_conformance.py  test_properties.py  test_public_api.py  test_resolver.py  test_resolver_conformance.py  test_sandbox_boundary.py  test_smoke.py  test_step_counter.py  test_thread_safety.py  test_values.py
