[project]
name = "starlark"
version = "0.1.0"
description = "Pure-Python implementation of the Starlark configuration language."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
  "configuration",
  "configuration-language",
  "dsl",
  "interpreter",
  "language",
  "parser",
  "sandbox",
  "starlark",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Interpreters",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pyright==1.1.409",
  "pytest>=9,<10",
  "ruff>=0.15,<0.16",
]

[project.scripts]
starlark-python = "starlark.cmd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starlark"]

[tool.poe.env]
"PYTHON_SOURCES" = "scripts/ src/ tests/"

[tool.poe.tasks.check]
sequence = ["format", "lint", "typecheck"]
help = "Run the formatter, then all static checks"
ignore_fail = "return_non_zero"

[tool.poe.tasks.clean]
script = "scripts.tasks:clean"
help = "Remove built files"

[tool.poe.tasks.files]
cmd = "echo ${PYTHON_SOURCES}"
help = "Print the list of files and directories used for static checks"

[tool.poe.tasks.format]
cmd = "ruff format ${PYTHON_SOURCES}"
help = "Run the Ruff formatter"

[tool.poe.tasks.lint]
cmd = "ruff check ${PYTHON_SOURCES}"
help = "Run Ruff"

[tool.poe.tasks.starlark-python]
cmd = "python -m starlark"
help = "Run starlark-python"

[tool.poe.tasks.test]
cmd = "pytest -q"
help = "Run Pytest (not through tox)"

[tool.poe.tasks.zipapp]
script = "scripts.tasks:zipapp"
help = "Build zipapp"

[tool.poe.tasks.typecheck]
cmd = "pyright ${PYTHON_SOURCES}"
help = "Run Pyright"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.tox]
requires = ["tox>=4.22"]
env_list = [
  "py311",
  "py312",
  "py313",
  "py314",
  "pypy311",
]

[tool.tox.env_run_base]
description = "run tests"
deps = ["pytest>=8,<9"]
commands = [
  ["pytest"],
]
